# webreg

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  fetch.rs  main.rs
