[package]
name = "webreg"
version = "0.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/NateXVI/webreg"
description = "A CLI tool for testing regexes against web pages"


[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.20", features = ["derive"] }
directories-next = "2.0.0"
hex = "0.4.3"
indicatif = "0.17.6"
libc = "0.2.147"
regex = "1.9.1"
reqwest = { version = "0.11.18", features = ["blocking"] }
rocksdb = "0.21.0"
threadpool = "1.8.1"
